--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>BTC/USD Simulator + Net Volume</title>
+<title>BTC/USD Simulator (5s) · Price + Net Volume</title>
 
 <script src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
 
@@ -16,18 +16,10 @@ body{
   font-family:Arial,sans-serif;
   text-align:center;
 }
-
 h3{margin:12px 0}
 
-#price{
-  width:100%;
-  height:320px;
-}
-
-#volume{
-  width:100%;
-  height:100px;
-}
+#price{width:100%;height:320px}
+#volume{width:100%;height:100px}
 
 #controls{
   display:flex;
@@ -71,19 +63,20 @@ button{
 </div>
 
 <script>
+/* ===== SETTINGS ===== */
 const TIMEFRAME = 5000;
 const LIQUIDITY = 1_000_000;
 
+/* ===== STATE ===== */
 let price = 30000;
-let lastPrice = price;
 let balanceUSD = 100000;
 let balanceBTC = 0;
 
 let currentCandle = null;
-let lastCandleTime = null;
 let currentNetVolume = 0;
+let lastCandleTime = null;
 
-/* PRICE CHART */
+/* ===== PRICE CHART ===== */
 const priceEl = document.getElementById('price');
 const priceChart = LightweightCharts.createChart(priceEl,{
   layout:{background:{color:'#111'},textColor:'#ccc'},
@@ -101,7 +94,7 @@ const candleSeries = priceChart.addCandlestickSeries({
   wickDownColor:'#d64545'
 });
 
-/* VOLUME CHART */
+/* ===== VOLUME CHART ===== */
 const volumeEl = document.getElementById('volume');
 const volumeChart = LightweightCharts.createChart(volumeEl,{
   layout:{background:{color:'#111'},textColor:'#ccc'},
@@ -119,7 +112,7 @@ const volumeSeries = volumeChart.addHistogramSeries({
   }
 });
 
-/* SYNC */
+/* ===== SYNC ===== */
 let syncing=false;
 function sync(a,b){
   a.timeScale().subscribeVisibleLogicalRangeChange(r=>{
@@ -132,87 +125,104 @@ function sync(a,b){
 sync(priceChart,volumeChart);
 sync(volumeChart,priceChart);
 
-/* RESIZE */
+/* ===== RESIZE ===== */
 function resize(){
   priceChart.resize(priceEl.clientWidth,320);
   volumeChart.resize(volumeEl.clientWidth,100);
 }
 window.addEventListener('resize',resize);
 
-/* CANDLES */
+/* ===== CANDLE LIFECYCLE ===== */
 function startNewCandle(time){
-  currentNetVolume=0;
-  currentCandle={time,open:price,high:price,low:price,close:price};
-}
+  currentNetVolume = 0;
 
-function ensureCandle(){
-  const now=Math.floor(Date.now()/TIMEFRAME)*TIMEFRAME;
-  if(!lastCandleTime||now>lastCandleTime){
-    startNewCandle(now/1000);
-    lastCandleTime=now;
-  }
-}
+  currentCandle = {
+    time,
+    open: price,
+    high: price,
+    low: price,
+    close: price
+  };
 
-function updateCandle(){
   candleSeries.update(currentCandle);
-}
-
-/* TRADES */
-function recordTrade(usd,side){
-  const delta=usd/LIQUIDITY;
-  if(side==='BUY'){
-    if(balanceUSD<usd) return;
-    balanceUSD-=usd;
-    balanceBTC+=usd/price;
-    price+=delta;
-    currentNetVolume+=usd;
-  }else{
-    const btc=usd/price;
-    if(balanceBTC<btc) return;
-    balanceBTC-=btc;
-    balanceUSD+=usd;
-    price-=delta;
-    currentNetVolume-=usd;
-  }
-
-  currentCandle.high=Math.max(currentCandle.high,price);
-  currentCandle.low=Math.min(currentCandle.low,price);
-  currentCandle.close=price;
 
   volumeSeries.update({
-    time:currentCandle.time,
-    value:currentNetVolume/1e6,
-    color:currentNetVolume>=0?'#1faa59':'#d64545'
+    time,
+    value: 0,
+    color: '#666'
   });
 }
 
-/* MANUAL */
+function ensureCandle(){
+  const now = Math.floor(Date.now()/TIMEFRAME)*TIMEFRAME;
+
+  if (!lastCandleTime) {
+    startNewCandle(now/1000);
+    lastCandleTime = now;
+    return;
+  }
+
+  if (now > lastCandleTime) {
+    /* finalize previous candle */
+    candleSeries.update(currentCandle);
+    volumeSeries.update({
+      time: currentCandle.time,
+      value: currentNetVolume / 1e6,
+      color: currentNetVolume >= 0 ? '#1faa59' : '#d64545'
+    });
+
+    /* start new */
+    startNewCandle(now/1000);
+    lastCandleTime = now;
+  }
+}
+
+/* ===== TRADES ===== */
+function recordTrade(usd, side){
+  const delta = usd / LIQUIDITY;
+
+  if (side === 'BUY') {
+    if (balanceUSD < usd) return;
+    balanceUSD -= usd;
+    balanceBTC += usd / price;
+    price += delta;
+    currentNetVolume += usd;
+  } else {
+    const btc = usd / price;
+    if (balanceBTC < btc) return;
+    balanceBTC -= btc;
+    balanceUSD += usd;
+    price -= delta;
+    currentNetVolume -= usd;
+  }
+
+  currentCandle.high = Math.max(currentCandle.high, price);
+  currentCandle.low  = Math.min(currentCandle.low, price);
+  currentCandle.close = price;
+}
+
+/* ===== MANUAL ===== */
 function trade(side){
   ensureCandle();
-  recordTrade(+amount.value,side);
-  updateCandle();
+  recordTrade(+amount.value, side);
+  candleSeries.update(currentCandle);
 }
 
-/* CROWD */
+/* ===== CROWD ===== */
 function crowd(){
-  if(Math.random()<0.6) return;
-  recordTrade(50+Math.random()*500,Math.random()>0.5?'BUY':'SELL');
+  if (Math.random() < 0.6) return;
+  recordTrade(50 + Math.random()*500, Math.random()>0.5 ? 'BUY' : 'SELL');
 }
 
-/* LOOP */
+/* ===== LOOP ===== */
 function tick(){
   ensureCandle();
   crowd();
-  updateCandle();
-  lastPrice=price;
+  candleSeries.update(currentCandle);
 }
 
-/* START */
-const start=Math.floor(Date.now()/TIMEFRAME)*TIMEFRAME;
-startNewCandle(start/1000);
-lastCandleTime=start;
-updateCandle();
-
+/* ===== START ===== */
+ensureCandle();
 priceChart.timeScale().fitContent();
 volumeChart.timeScale().fitContent();
 resize();
