--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ function trade(side){
 /* CROWD */
 function crowd(){
   if(Math.random()<0.6) return;
-  recordTrade(50+Math.random()*500,Math.random()>0.5?'BUY':'SELL');
+  recordTrade(50+Math.random()*500,'SELL');
 }
 
 /* LOOP */
