--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ button{
 
 <body>
 
-<h3>BTC/USD Simulator (5s)</h3>
+<h3>BTC/USD Simulator</h3>
 
 <div id="price"></div>
 <div id="volume"></div>
